[workspace]

members = [
    "echo", # for testing
    # sample
    "networking-sample",
    # modules
    "next-day-of-week",
    "integer-sum",
    "departments-iterator",
    "get-naive-datetime-period-text",
    "naive-datetime-add",
    "get-naive-datetime-period-range",
    "list-at",
    "table-row-field-value-to-cascader-field-value",
    "table-row-field-value-to-relation-field-value"
]
