[workspace]

members = [
    "echo",
    "flow-util",
    "get-flow-details",
    "get-flow-task-list",
    "get-flow-single-record",
    "get-flow-all-moments",
    "get-flow-all-vertices",
    "create-flow-task",
    "initiate-flow-task",
    "get-flow-assignments",
    "audit-flow",
    "get-flow-records"
]
