[package]
name = "get_flow_task_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flow_util = { path = "../flow_util" }

[dependencies.jet_programmable_rust_binding]
git = "https://github.com/Byzanteam/jet-programmable-rust-binding"
features = ["networking"]
